# AGENTIC

./: README.md
backend/: .env  .env.example  README.md  agenticpro.txt  pyproject.toml
backend/app/: config.py  main.py  models.py  qwen_agent_client.py  summarizer.py
backend/realtime_web_summarizer_qwen_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
extension/: manifest.json
extension/src/: background.js  content.js  popup.html  popup.js  styles.css
